--- a/data/rush/19106.yaml
+++ b/data/rush/19106.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Harpie Ladies" face-up on your field.
+    You have "Harpie Lady Sisters" face-up on your field.
   de:
   es:
   fr:
