--- a/data/rush/19437.yaml
+++ b/data/rush/19437.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Return 1 face-up "Harpie Ladies" from your field to the owner's hand.
+    Return 1 face-up "Harpie Lady Sisters" from your field to the owner's hand.
   de:
   es:
   fr:
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, if "Harpie Lady" or "Harpie Ladies" is among the cards sent, you can add 1 "Harpie's Feather Tempest" from your Graveyard to your hand.
+    Send the top 3 cards of your Deck to the Graveyard. Then, if "Harpie Lady" or "Harpie Lady Sisters" is among the cards sent, you can add 1 "Harpie's Feather Tempest" from your Graveyard to your hand.
   de:
   es:
   fr:
