--- a/data/rush/19762.yaml
+++ b/data/rush/19762.yaml
@@ -40,7 +40,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, if you have 3 "Harpie Lady" and/or "Harpie Ladies" face-up on your field, you can destroy 1 monster on your opponent's field.
+    This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, if you have 3 "Harpie Lady" and/or "Harpie Lady Sisters" face-up on your field, you can destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
