--- a/data/rush/19096.yaml
+++ b/data/rush/19096.yaml
@@ -1,6 +1,6 @@
 konami_id: 19096
 name:
-  en: Harpie Ladies [L]
+  en: Harpie Lady Sisters [L]
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    This card's name becomes "Harpie Ladies" while in the Graveyard.
+    This card's name becomes "Harpie Lady Sisters" while in the Graveyard.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies", and cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Lady Sisters", and cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
   de:
   es:
   fr:
@@ -66,7 +66,7 @@ series:
 - Harpie
 images:
 - index: 1
-  image: HarpieLadiesL-RDTB01-JP-SR.png
+  image: HarpieLadySistersL-RDTB01-JP-SR.png
 sets:
   ja:
   - set_number: RD/TB01-JP001
@@ -81,8 +81,6 @@ sets:
     - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 936324
