--- a/data/rush/19107.yaml
+++ b/data/rush/19107.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Harpie Lady" or "Harpie Ladies" face-up on your field.
+    You have "Harpie Lady" or "Harpie Lady Sisters" face-up on your field.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon up to 2 "Harpie Lady" and/or "Harpie Ladies" from your Graveyard face-up to your field. You cannot declare an attack on Attack Position monsters with 1200 or less ATK this turn.
+    Special Summon up to 2 "Harpie Lady" and/or "Harpie Lady Sisters" from your Graveyard face-up to your field. You cannot declare an attack on Attack Position monsters with 1200 or less ATK this turn.
   de:
   es:
   fr:
