--- a/rush.yaml
+++ b/rush.yaml
@@ -136386,3 +136386,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1045076
+---
+konami_id:
+name:
+  en: Magnet Return
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マグネット・リターン
+  ja_romaji: Magunetto Ritān
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 face-up Level 4 or lower Rock Type monster from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 7 or 8 Rock Type monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Magnet Warrior
+images:
+- index: 1
+  image: MagnetReturn-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP036
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1045856
