--- a/data/cards/38044854.yaml
+++ b/data/cards/38044854.yaml
@@ -9,7 +9,7 @@ name:
   pt: Ascendente Magia de Aumento de Classe Força do Ataqueraptor
   ja: <ruby>ЯＲＵＭ<rt>ライズランクアップマジック</rt></ruby>－レイド・ラプターズ・フォース
   ja_romaji: Raizu Rankuappu Majikku - Reido Raputāzu Fōsu
-  ko: ЯRUM－레이드 랩터즈 포스
+  ko: <ruby>ЯRUM<rt>라이즈 랭크 업 매직</rt></ruby>－레이드 랩터즈 포스
   ko_rr:
   zh-TW:
   zh-CN: 起升阶魔法－急袭猛禽之力
