--- a/data/cards/08617563.yaml
+++ b/data/cards/08617563.yaml
@@ -9,7 +9,7 @@ name:
   pt: Ataqueraptor - Corajoso Strix
   ja: <ruby>ＲＲ<rt>レイド・ラプターズ</rt></ruby>－ブレイブ・ストリクス
   ja_romaji: Reido Raputāzu - Bureibu Sutorikusu
-  ko: RR－브레이브 스트릭스
+  ko: <ruby>RR<rt>레이드 랩터즈</rt></ruby>－브레이브 스트릭스
   ko_rr:
   zh-TW:
   zh-CN: 急袭猛禽－勇猛林鸮
