--- a/data/cards/68638985.yaml
+++ b/data/cards/68638985.yaml
@@ -8,7 +8,7 @@ name:
   it: Rospo Melma
   pt: Rã Limo
   ja: カエルスライム
-  ja_romaji: Kaerusuraimu
+  ja_romaji: Kaeru Suraimu
   ko: 깨구리 슬라임
   ko_rr: Kkaeguri Seullaim
   zh-TW:
