--- a/data/cards/02089016.yaml
+++ b/data/cards/02089016.yaml
@@ -19,23 +19,23 @@ text:
     ● This card can make up to 2 attacks on monsters during each Battle Phase.
     You can only use each effect of "Chronomaly Tuspa Rocket" once per turn.
   de: |-
-    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst 1 „Chronomal“-Monster von deinem Deck oder Extra Deck auf den Friedhof legen und dann 1 offenes Monster auf dem Spielfeld wählen; es verliert ATK in Höhe der Stufe / des Rangs des auf den Friedhof gelegten Monsters x 200. Ein „Nummer“-Xyz-Monster, für dessen Beschwörung diese Karte auf dem Spielfeld als Material verwendet wurde, erhält diesen Effekt.
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst 1 „Chronomal“-Monster von deinem Deck oder Extra Deck auf den Friedhof legen und dann 1 offenes Monster auf dem Spielfeld wählen; es verliert bis zum Ende dieses Spielzugs ATK in Höhe der Stufe / des Rangs des auf den Friedhof gelegten Monsters x 200. Ein „Nummer“-Xyz-Monster, für dessen Beschwörung diese Karte auf dem Spielfeld als Material verwendet wurde, erhält diesen Effekt.
     ● Diese Karte kann während jeder Battle Phase bis zu 2 Angriffe gegen Monster durchführen.
     Du kannst jeden Effekt von „Chronomale Tuspa-Rakete“ nur einmal pro Spielzug verwenden.
   es: |-
-    Si esta carta es Invocada de Modo Normal o Especial: puedes mandar al Cementerio 1 monstruo "Cronómalo/a" en tu Deck o Deck Extra, y después seleccionar 1 monstruo boca arriba en el Campo; éste pierde ATK igual al Nivel/Rango del monstruo mandado al Cementerio x 200. Un Monstruo Xyz "Número" que fue Invocado usando esta carta en el Campo como material gana este efecto.
+    Si esta carta es Invocada de Modo Normal o Especial: puedes mandar al Cementerio 1 monstruo "Cronómalo/a" en tu Deck o Deck Extra, y después seleccionar 1 monstruo boca arriba en el Campo; éste pierde ATK igual al Nivel/Rango del monstruo mandado al Cementerio x 200 hasta el final de este turno. Un Monstruo Xyz "Número" que fue Invocado usando esta carta en el Campo como material gana este efecto.
     ● Esta carta puede hacer hasta 2 ataques a monstruos durante cada Battle Phase.
     Sólo puedes usar cada efecto de "Cohete Tuspa Cronómalo" una vez por turno.
   fr: |-
-    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez envoyer 1 monstre "Chronomal" depuis votre Deck ou Extra Deck au Cimetière, puis ciblez 1 monstre face recto sur le Terrain ; il perd une ATK égale au Niveau/Rang du monstre envoyé au Cimetière x 200. Un Monstre Xyz "Numéro" qui a été Invoqué en utilisant cette carte sur le Terrain comme Matériel gagne cet effet.
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez envoyer 1 monstre "Chronomal" depuis votre Deck ou Extra Deck au Cimetière, puis ciblez 1 monstre face recto sur le Terrain ; jusqu'à la fin de ce tour, il perd une ATK égale au Niveau/Rang du monstre envoyé au Cimetière x 200. Un Monstre Xyz "Numéro" qui a été Invoqué en utilisant cette carte sur le Terrain comme Matériel gagne cet effet.
     ● Durant chaque Battle Phase, cette carte peut faire max. 2 attaques sur des monstres.
     Vous ne pouvez utiliser chaque effet de "Roquette Tuspa Chronomal" qu'une fois par tour.
   it: |-
-    Se questa carta viene Evocata Normalmente o Specialmente: puoi mandare 1 mostro "Cronomalia" dal tuo Deck o Extra Deck al Cimitero, poi scegliere come bersaglio 1 mostro scoperto sul Terreno; esso perde ATK pari al Livello/Rango del mostro mandato al Cimitero x 200. Un Mostro Xyz "Numero" che è stato Evocato utilizzando questa carta sul Terreno come materiale guadagna questo effetto.
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi mandare 1 mostro "Cronomalia" dal tuo Deck o Extra Deck al Cimitero, poi scegliere come bersaglio 1 mostro scoperto sul Terreno; esso perde ATK pari al Livello/Rango del mostro mandato al Cimitero x 200 fino alla fine di questo turno. Un Mostro Xyz "Numero" che è stato Evocato utilizzando questa carta sul Terreno come materiale guadagna questo effetto.
     ● Questa carta può effettuare fino a 2 attacchi su mostri durante ogni Battle Phase.
     Puoi utilizzare ogni effetto di "Cronomalia Razzo Tuspa" una sola volta per turno.
   pt: |-
-    Se este card for Invocado por Invocação-Normal ou Especial: você pode enviar 1 monstro "Cronomalia" do seu Deck ou Deck Adicional para o Cemitério e, depois, escolha 1 monstro com a face para cima no campo; ele perde ATK igual ao Nível/Classe do monstro enviado para o Cemitério x 200. Um Monstro Xyz "Número" que foi Invocado usando este card no campo como matéria ganha este efeito.
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode enviar 1 monstro "Cronomalia" do seu Deck ou Deck Adicional para o Cemitério e, depois, escolha 1 monstro com a face para cima no campo; até o final deste turno, ele perde ATK igual ao Nível/Classe do monstro enviado para o Cemitério x 200. Um Monstro Xyz "Número" que foi Invocado usando este card no campo como matéria ganha este efeito.
     ● Este card pode realizar até 2 ataques contra monstros durante cada Fase de Batalha.
     Você só pode usar cada efeito de "Cronomalia Foguete de Tushpa" uma vez por turno.
   ja: |-
