--- a/data/cards/17032740.yaml
+++ b/data/cards/17032740.yaml
@@ -22,31 +22,31 @@ text:
     ● 1 Head: Return all monsters you control to the hand.
   de: |-
     „Elementar-HELD Neos“ + „Neo-Weltraum Dark Panther“ + „Neo-Weltraum Glow Moss“
-    Muss erst als Spezialbeschwörung (von deinem Extra Deck) beschworen werden, indem du die oben aufgeführten Karten, die du kontrollierst, ins Deck mischst. („Polymerisation“ wird nicht verwendet.) Einmal pro Spielzug, während der End Phase: Mische diese Karte ins Extra Deck und falls du dies tust, setze alle offenen Monster auf dem Spielfeld. Einmal pro Spielzug, während deiner Main Phase 1: Du kannst 3-mal eine Münze werfen.
+    Muss erst als Spezialbeschwörung (von deinem Extra Deck) beschworen werden, indem du die oben aufgeführten Karten, die du kontrollierst, ins Deck mischst. Einmal pro Spielzug, während der End Phase: Mische diese Karte ins Extra Deck und falls du dies tust, setze alle offenen Monster auf dem Spielfeld. Einmal pro Spielzug, während deiner Main Phase 1: Du kannst 3-mal eine Münze werfen.
     ● 3-mal Kopf: Zerstöre alle Monster, die dein Gegner kontrolliert.
     ● 2-mal Kopf: Für den Rest dieses Spielzugs werden die Effekte aller offenen Monster annulliert, die dein Gegner kontrolliert.
     ● 1-mal Kopf: Gib alle Monster, die du kontrollierst, auf die Hand zurück.
   es: |-
     "HÉROE Elemental Neos" + "Pantera Oscura Neo Espacial" + "Musgo Refulgente Neo Espacial"
-    Debe ser primero Invocado de Modo Especial (desde tu Deck Extra) barajando al Deck las cartas listadas arriba que tú controlas. (No usas "Polimerización"). Una vez por turno, durante la End Phase: baraja esta carta al Deck Extra y, si lo haces, Coloca todos los monstruos boca arriba que estén en el Campo. Una vez por turno, durante tu Main Phase 1: puedes lanzar una moneda 3 veces.
+    Debe ser primero Invocado de Modo Especial (desde tu Deck Extra) barajando al Deck las cartas listadas arriba que tú controles. Una vez por turno, durante la End Phase: baraja esta carta al Deck Extra y, si lo haces, Coloca todos los monstruos boca arriba que estén en el Campo. Una vez por turno, durante tu Main Phase 1: puedes lanzar una moneda 3 veces.
     ● 3 Caras: Destruye todos los monstruos que controle tu adversario.
     ● 2 Caras: Por el resto de este turno, los efectos de todos los monstruos boca arriba que controle tu adversario son negados.
     ● 1 Cara: Devuelve todos los monstruos que tú controles a la mano.
   fr: |-
     "Néos, HÉROS Élémentaire" + "Panthère Noire Néo-Spacien" + "Limon Luminescent Néo-Spacien"
-    Doit d'abord être Invoquée Spécialement (depuis votre Extra Deck) en mélangeant les cartes ci-dessus que vous contrôlez dans le Deck. (N'utilisez pas "Polymérisation".) Une fois par tour, durant la End Phase : mélangez cette carte dans l'Extra Deck, et si vous le faites, Posez tous les monstres face recto sur le Terrain. Une fois par tour, durant votre Main Phase 1 : vous pouvez lancer une pièce 3 fois.
+    Doit d'abord être Invoquée Spécialement (depuis votre Extra Deck) en mélangeant les cartes ci-dessus que vous contrôlez dans le Deck. Une fois par tour, durant la End Phase : mélangez cette carte dans l'Extra Deck, et si vous le faites, Posez tous les monstres face recto sur le Terrain. Une fois par tour, durant votre Main Phase 1 : vous pouvez lancer une pièce 3 fois.
     ● 3 faces : Détruisez tous les monstres contrôlés par votre adversaire.
     ● 2 faces : Le reste de ce tour, les effets de tous les monstres face recto contrôlés par votre adversaire sont annulés.
     ● 1 face : Renvoyez tous les monstres que vous contrôlez à la main.
   it: |-
     "Neos EROE Elementale" + "Pantera Nera Neo-Spaziale" + "Muschio Luminoso Neo-Spaziale"
-    Deve prima essere Evocato Specialmente (dal tuo Extra Deck) mischiando le carte sopra indicate che controlli nel Deck. (Non utilizzi "Polimerizzazione".) Una volta per turno, durante la End Phase: mischia questa carta nell'Extra Deck e, se lo fai, Posiziona tutti i mostri scoperti sul Terreno. Una volta per turno, durante la tua Main Phase 1: puoi lanciare una moneta 3 volte.
+    Deve prima essere Evocato Specialmente (dal tuo Extra Deck) mischiando le carte sopra indicate che controlli nel Deck. Una volta per turno, durante la End Phase: mischia questa carta nell'Extra Deck e, se lo fai, Posiziona tutti i mostri scoperti sul Terreno. Una volta per turno, durante la tua Main Phase 1: puoi lanciare una moneta 3 volte.
     ● 3 Teste: Distruggi tutti i mostri controllati dal tuo avversario.
     ● 2 Teste: Per il resto di questo turno, gli effetti di tutti i mostri scoperti controllati dal tuo avversario sono annullati.
     ● 1 Testa: Fai ritornare nella mano tutti i mostri che controlli.
   pt: |-
     "Neos, o HERÓI do Elemento" + "Pantera Negra Neoespacial" + "Musgo Brilhante Neoespacial"
-    Primeiro deve ser Invocado por Invocação-Especial (do seu Deck Adicional) ao embaralhar os cards acima que você controla no Deck. (Você não usa "Polimerização".) Uma vez por turno, durante a Fase Final: embaralhe este card no Deck Adicional e, se isso acontecer, Baixe todos os monstros com a face para cima no campo. Uma vez por turno, durante sua Fase Principal 1: você pode lançar uma moeda 3 vezes.
+    Primeiro deve ser Invocado por Invocação-Especial (do seu Deck Adicional) ao embaralhar os cards acima que você controla no Deck. Uma vez por turno, durante a Fase Final: embaralhe este card no Deck Adicional e, se isso acontecer, Baixe todos os monstros com a face para cima no campo. Uma vez por turno, durante sua Fase Principal 1: você pode lançar uma moeda 3 vezes.
     ● 3 Caras: Destrua todos os monstros que seu oponente controla.
     ● 2 Caras: Pelo resto deste turno, os efeitos de todos os monstros com a face para cima que seu oponente controla são negados.
     ● 1 Cara: Devolva todos os monstros que você controla para a mão.
