--- a/data/cards/24096499.yaml
+++ b/data/cards/24096499.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Puedes descartar 1 carta, y después seleccionar 1 monstruo Bestia de Nivel 2 o menor en tu Cementerio, excepto "Valericiervo, Bestia Mística del Bosque"; Invócalo de Modo Especial en Posición de Ataque o en Posición de Defensa boca abajo. Sólo puedes usar este efecto de "Valericiervo, Bestia Mística del Bosque" una vez por turno.
   fr: |-
-    Vous pouvez défausser 1 carte, puis ciblez 1 monstre Bête de max. Niveau 2 ("Valerifawn, Bête Mystique de la Forêt" exclu) dans votre Cimetière ; Invoquez-le Spécialement en Position d'Attaque ou en Position de Défense face verso. Vous ne pouvez utiliser cet effet de "Valerifawn, Bête Mystique de la Forêt" qu'une fois par tour.
+    Vous pouvez défausser 1 carte, puis ciblez 1 monstre Bête de max. Niveau 2 ("Valerifawn, Bête Mystique de la Forêt" exclu) dans votre Cimetière ; Invoquez-le Spécialement en Position d'Attaque ou Position de Défense face verso. Vous ne pouvez utiliser cet effet de "Valerifawn, Bête Mystique de la Forêt" qu'une fois par tour.
   it: |-
     Puoi scartare 1 carta, poi scegliere come bersaglio 1 mostro Bestia di Livello 2 o inferiore nel tuo Cimitero, eccetto "Valericerbiatto, Bestia Mistica della Foresta"; Evocalo Specialmente in Posizione di Attacco o coperto in Posizione di Difesa. Puoi utilizzare questo effetto di "Valericerbiatto, Bestia Mistica della Foresta" una sola volta per turno.
   pt: |-
