--- a/data/cards/33574806.yaml
+++ b/data/cards/33574806.yaml
@@ -30,7 +30,7 @@ text:
     1 mostro "EROE Elementale" + 1 mostro OSCURITÀ
     Deve essere Evocato tramite Fusione. Guadagna 100 ATK per ogni mostro "EROE Elementale" nel tuo Cimitero.
   pt: |-
-    1 monstro "HERÓI do Elemento" + 1 monstro das TREVAS
+    1 monstro "HERÓI do Elemento" + 1 monstro de TREVAS
     Deve ser Invocado por Invocação-Fusão. Ganha 100 de ATK para cada monstro "HERÓI do Elemento" no seu Cemitério.
   ja: |-
     「Ｅ・ＨＥＲＯ」と名のついたモンスター＋闇属性モンスター
