--- a/data/cards/56111151.yaml
+++ b/data/cards/56111151.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Each time a card(s) is sent from the field to the GY, place 1 Kaiju Counter on this card for each sent card (max. 5). Once per turn, while 3 or more Kaiju Counters are on this card: You can add 1 "Kaiju" monster from your Deck to your hand. If this card would be destroyed by a card effect, you can remove 1 Kaiju Counter from this card instead.
   de: |-
-    Jedes Mal, wenn eine oder mehr Karten vom Spielfeld auf den Friedhof gelegt werden, lege für jede auf den Friedhof gelegte Karte 1 Kaiju-Zählmarke auf diese Karte (max. 5). Einmal pro Spielzug, solange 3 oder mehr Kaiju-Zählmarken auf dieser Karte liegen: Du kannst deiner Hand 1 „Kaiju“-Monster von deinem Deck hinzufügen. Falls diese Karte durch einen Karteneffekt zerstört würde, kannst du stattdessen 1 Kaiju-Zählmarke von ihr entfernen.
+    Jedes Mal, wenn eine oder mehr Karten vom Spielfeld auf den Friedhof gelegt werden, lege für jede gelegte Karte 1 Kaiju-Zählmarke auf diese Karte (max. 5). Einmal pro Spielzug, solange 3 oder mehr Kaiju-Zählmarken auf dieser Karte liegen: Du kannst deiner Hand 1 „Kaiju“-Monster von deinem Deck hinzufügen. Falls diese Karte durch einen Karteneffekt zerstört würde, kannst du stattdessen 1 Kaiju-Zählmarke von ihr entfernen.
   es: |-
     Cada vez que una o más cartas son mandadas del Campo al Cementerio, pon 1 Contador Kaiju en esta carta por cada carta mandada (máx. 5). Una vez por turno, mientras 3 o más Contadores Kaiju están en esta carta: puedes añadir a tu mano 1 monstruo "Kaiju" en tu Deck. Si esta carta fuera a ser destruida por efecto de una carta, puedes retirar 1 Contador Kaiju de esta carta en su lugar.
   fr: |-
