--- a/data/cards/56832966.yaml
+++ b/data/cards/56832966.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｓ<rt>シャイニング</rt></ruby><ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>３９ <ruby>希<rt>き</rt></ruby><ruby>望<rt>ぼう</rt></ruby><ruby>皇<rt>おう</rt></ruby>ホープ・ザ・ライトニング
   ja_romaji: Shainingu Nanbāzu Sanjūkyū Kibōō Hōpu Za Raitoningu
   ko: <ruby>SNo.<rt>샤이닝 넘버즈</rt></ruby>39 유토피아 더 라이트닝
-  ko_rr: Syaining Neombeojeu Seoreunahop Yutopia Deo Raiteuning
+  ko_rr: Syaining Neombeojeu Samsipgu Yutopia Deo Raiteuning
   zh-TW:
   zh-CN: 闪光编号39 希望皇霍普・雷霆
 text:
@@ -19,7 +19,7 @@ text:
     You can also Xyz Summon this card by using a Rank 4 "Utopia" monster you control as material. (Transfer its materials to this card.) Cannot be used as material for an Xyz Summon. If this card battles, your opponent cannot activate cards or effects until the end of the Damage Step. Once per Chain, during damage calculation, if this card battles an opponent's monster while this card has a "Utopia" Xyz Monster as material (Quick Effect): You can detach 2 materials from this card; this card's ATK becomes 5000 during that damage calculation only.
   de: |-
     3 LICHT Monster der Stufe 5
-    Du kannst diese Karte auch als Xyz-Beschwörung beschwören, indem du ein „Utopia“-Monster des Rangs 4, das du kontrollierst, als das Material verwendest. (Transferiere sein Material an diese Karte.) Kann nicht als Material für eine Xyz-Beschwörung verwendet werden. Falls diese Karte kämpft, kann dein Gegner bis zum Ende des Damage Steps weder Karten noch Effekte aktivieren. Einmal pro Kette, während der Schadensberechnung, falls diese Karte gegen ein Monster eines Gegners kämpft, solange diese Karte ein „Utopia“-Xyz-Monster als Material hat (Schnelleffekt): Du kannst 2 Material von dieser Karte abhängen; die ATK dieser Karte werden nur während der Schadensberechnung zu 5000.
+    Du kannst diese Karte auch als Xyz-Beschwörung beschwören, indem du ein „Utopia“-Monster des Rangs 4, das du kontrollierst, als das Material verwendest. (Transferiere sein Material an diese Karte.) Kann nicht als Material für eine Xyz-Beschwörung verwendet werden. Falls diese Karte kämpft, kann dein Gegner bis zum Ende des Damage Steps weder Karten noch Effekte aktivieren. Einmal pro Kette, während der Schadensberechnung, falls diese Karte gegen ein Monster eines Gegners kämpft, solange diese Karte ein „Utopia“-Xyz-Monster als Material hat (Schnelleffekt): Du kannst 2 Material von dieser Karte abhängen; die ATK dieser Karte werden nur während jener Schadensberechnung zu 5000.
   es: |-
     3 monstruos de LUZ de Nivel 5
     También puedes Invocar Xyz esta carta usando un monstruo "Utopía" de Rango 4 que controles como material. (Transfiere sus materiales a esta carta). No puede ser usado como material para una Invocación Xyz. Si esta carta batalla, tu adversario no puede activar cartas o efectos hasta el final del Damage Step. Una vez por Cadena, durante el cálculo de daño, si esta carta batalla con un monstruo del adversario mientras esta carta tiene un Monstruo Xyz "Utopía" como material (Efecto Rápido): puedes desacoplar 2 materiales de esta carta; el ATK de esta carta se convierte en 5000 sólo durante ese cálculo de daño.
@@ -31,7 +31,7 @@ text:
     Puoi anche Evocare Xyz questa carta utilizzando un mostro "Utopia" di Rango 4 che controlli come materiale. (Trasferisci i suoi materiali su questa carta.) Non può essere utilizzato come materiale per un'Evocazione Xyz. Se questa carta combatte, il tuo avversario non può attivare carte o effetti fino alla fine del Damage Step. Una volta per Catena, durante il calcolo dei danni, se questa carta combatte con un mostro dell'avversario mentre questa carta ha un Mostro Xyz "Utopia" come materiale (Effetto Rapido): puoi staccare 2 materiali da questa carta; l'ATK di questa carta diventa 5000 solamente durante quel calcolo dei danni.
   pt: |-
     3 monstros de LUZ de Nível 5
-    Você também pode Invocar este card por Invocação-Xyz ao usar um monstro "Utopia" de Classe 4 que você controla como matéria. (Transfira as matérias dele para este card.) Não pode ser usado como matéria para uma Invocação-Xyz. Se este card batalhar, seu oponente não pode ativar cards ou efeitos até o final da Etapa de Dano. Uma vez por Corrente, durante o cálculo de dano, se este card batalhar um monstro do oponente enquanto este card tiver um Monstro Xyz "Utopia" como matéria (Efeito Rápido): você pode desassociar 2 matérias deste card; o ATK deste card se torna 5000, apenas durante o cálculo de dano.
+    Você também pode Invocar este card por Invocação-Xyz ao usar um monstro "Utopia" de Classe 4 que você controla como matéria. (Transfira as matérias dele para este card.) Não pode ser usado como matéria para uma Invocação-Xyz. Se este card batalhar, seu oponente não pode ativar cards ou efeitos até o final da Etapa de Dano. Uma vez por Corrente, durante o cálculo de dano, se este card batalhar um monstro do oponente enquanto este card tiver um Monstro Xyz "Utopia" como matéria (Efeito Rápido): você pode desassociar 2 matérias deste card; o ATK deste card se torna 5000, apenas durante esse cálculo de dano.
   ja: |-
     光属性レベル５モンスター×３
     このカードは自分フィールドのランク４の「希望皇ホープ」モンスターの上に重ねてＸ召喚する事もできる。このカードはＸ召喚の素材にできない。①：このカードが戦闘を行う場合、相手はダメージステップ終了時までカードの効果を発動できない。②：このカードが「希望皇ホープ」モンスターをＸ素材としている場合、このカードが相手モンスターと戦闘を行うダメージ計算時に１度、このカードのＸ素材を２つ取り除いて発動できる。このカードの攻撃力はそのダメージ計算時のみ５０００になる。
