--- a/data/cards/60944809.yaml
+++ b/data/cards/60944809.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se non controlli nessun mostro: scegli come bersaglio 1 Mostro Xyz "Numero" nel tuo Cimitero; Evocalo Specialmente, poi pesca 1 carta. Puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 Mostro Xyz "Numero" che controlli; attacca 1 carta dalla tua mano a esso come materiale. Puoi utilizzare ogni effetto di "Numeri Gloriosi" una sola volta per turno.
   pt: |-
-    Se você não controlar nenhum monstro: escolha 1 Monstro Xyz "Número" no seu Cemitério; Invoque-o por Invocação-Especial e, depois, compre 1 card. Você pode banir este card do seu Cemitério e, depois, escolher 1 Monstro Xyz "Número" que você controla; associe 1 card da sua mão a ele como matéria. Você só pode usar cada efeito de "Números Gloriosos" uma vez por turno.
+    Se você não controlar nenhum monstro: escolha 1 Monstro Xyz "Número" no seu Cemitério; Invoque-o por Invocação-Especial e, depois, compre 1 card. Você pode banir este card do seu Cemitério e, depois, escolha 1 Monstro Xyz "Número" que você controla; associe 1 card da sua mão a ele como matéria. Você só pode usar cada efeito de "Números Gloriosos" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドにモンスターが存在しない場合、自分の墓地の「Ｎｏ．」Ｘモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。その後、自分はデッキから１枚ドローする。②：墓地のこのカードを除外し、自分フィールドの「Ｎｏ．」Ｘモンスター１体を対象として発動できる。手札１枚をそのモンスターの下に重ねてＸ素材とする。
   ko: |-
