--- a/data/cards/69109764.yaml
+++ b/data/cards/69109764.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta viene Evocata Normalmente o Specialmente: puoi scegliere come bersaglio 1 mostro Drago di Livello 4 o inferiore nel tuo Cimitero; aggiungilo alla tua mano. Mentre non controlli nessun Mostro Link, eccetto nel turno in cui questa carta è stata mandata al Cimitero: puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 Mostro Link OSCURITÀ Drago nel tuo Cimitero; Evocalo Specialmente. Puoi utilizzare ogni effetto di "Drago Ibernazione" una sola volta per turno.
   pt: |-
-    Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro Dragão de Nível 4 ou menos no seu Cemitério; adicione-o à sua mão. Enquanto você não controlar nenhum Monstro Link, exceto no turno em que este card foi enviado para o Cemitério: você pode banir este card do seu Cemitério e, depois, escolher 1 Monstro Link Dragão de TREVAS no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar cada efeito de "Dragão da Hibernação" uma vez por turno.
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro Dragão de Nível 4 ou menos no seu Cemitério; adicione-o à sua mão. Enquanto você não controlar nenhum Monstro Link, exceto no turno em que este card foi enviado para o Cemitério: você pode banir este card do seu Cemitério e, depois, escolha 1 Monstro Link Dragão de TREVAS no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar cada efeito de "Dragão da Hibernação" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、自分の墓地のレベル４以下のドラゴン族モンスター１体を対象として発動できる。そのモンスターを手札に加える。②：自分フィールドにリンクモンスターが存在しない場合、墓地のこのカードを除外し、自分の墓地のドラゴン族・闇属性のリンクモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。この効果はこのカードが墓地へ送られたターンには発動できない。
   ko: |-
