--- a/data/cards/83295594.yaml
+++ b/data/cards/83295594.yaml
@@ -23,7 +23,7 @@ text:
   fr: |-
     Durant la Main Phase de votre adversaire, vous pouvez (Effet Rapide) : immédiatement après la résolution de cet effet, Invoquez par Synchronisation en utilisant cette carte que vous contrôlez.
   it: |-
-    Durante la Main Phase]] del tuo avversario, puoi (Effetto Rapido): immediatamente dopo che questo effetto si è risolto, Synchro Evoca utilizzando questa carta che controlli.
+    Durante la Main Phase del tuo avversario, puoi (Effetto Rapido): immediatamente dopo che questo effetto si è risolto, Synchro Evoca utilizzando questa carta che controlli.
   pt: |-
     Durante a Fase Principal do seu oponente, você pode (Efeito Rápido): imediatamente depois que este efeito resolver, Invoque por Invocação-Sincro usando este card que você controla.
   ja: |-
