--- a/data/cards/89312388.yaml
+++ b/data/cards/89312388.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Once per turn: You can reveal 1 Fusion Monster from your Extra Deck, then send 1 of the Fusion Materials whose name is mentioned on that card from your Deck to the GY; this card's name becomes the sent monster's until the End Phase.
   de: |-
-    Einmal pro Spielzug: Du kannst 1 Fusionsmonster von deinem Extra Deck vorzeigen, dann lege 1 des Fusionsmaterials, dessen Name ausdrücklich auf der Karte aufgeführt ist, von deinem Deck auf den Friedhof; der Name dieser Karte wird bis zur End Phase der gleiche wie der Name des auf den Friedhof gelegten Monsters.
+    Einmal pro Spielzug: Du kannst 1 Fusionsmonster von deinem Extra Deck vorzeigen, dann lege 1 des Fusionsmaterials, dessen Name auf jener Karte erwähnt ist, von deinem Deck auf den Friedhof; der Name dieser Karte wird bis zur End Phase der gleiche wie der des gelegten Monsters.
   es: |-
-    Una vez por turno: puedes mostrar 1 Monstruo de Fusión en tu Deck Extra, y después mandar al Cementerio 1 de los Materiales de Fusión cuyo nombre esté listado específicamente en esa carta que esté en tu Deck; hasta la End Phase, el nombre de esta carta se convierte en el nombre del monstruo que mandaste al Cementerio.
+    Una vez por turno: puedes mostrar 1 Monstruo de Fusión en tu Deck Extra, y después mandar al Cementerio 1 de los Materiales de Fusión cuyo nombre sea mencionado en esa carta en tu Deck; el nombre de esta carta se convierte en el del monstruo mandado hasta la End Phase.
   fr: |-
-    Une fois par tour : vous pouvez révéler 1 Monstre de Fusion depuis votre Extra Deck, puis envoyez 1 des Matériels de Fusion dont le nom est listé précisément sur la carte depuis votre Deck au Cimetière ; jusqu'à la End Phase, le nom de cette carte devient celui du monstre envoyé.
+    Une fois par tour : vous pouvez révéler 1 Monstre Fusion depuis votre Extra Deck, puis envoyez 1 des Matériels Fusion dont le nom est mentionné sur la carte depuis votre Deck au Cimetière ; jusqu'à la End Phase, le nom de cette carte devient celui du monstre envoyé.
   it: |-
-    Una volta per turno: puoi rivelare 1 Mostro Fusione dal tuo Extra Deck, poi mandare 1 dei Materiali da Fusione il cui nome è specificamente indicato su quella carta dal tuo Deck al Cimitero; il nome di questa carta diventa quello del mostro mandato al Cimitero fino alla End Phase.
+    Una volta per turno: puoi rivelare 1 Mostro Fusione dal tuo Extra Deck, poi mandare 1 dei Materiali da Fusione il cui nome è menzionato su quella carta dal tuo Deck al Cimitero; il nome di questa carta diventa quello del mostro mandato al Cimitero fino alla End Phase.
   pt: |-
-    Uma vez por turno: você pode revelar 1 Monstro de Fusão do seu Deck Adicional e, depois, enviar 1 das Matérias de Fusão cujo nome esteja especificamente listado nesse card do seu Deck para o Cemitério; até a Fase Final, o nome deste card se torna o nome desse monstro enviado para o Cemitério.
+    Uma vez por turno: você pode revelar 1 Monstro de Fusão do seu Deck Adicional e, depois, envie 1 das Matérias de Fusão cujo nome seja mencionado nesse card do seu Deck para o Cemitério; até a Fase Final, o nome deste card se torna o nome desse monstro enviado.
   ja: |-
     ①：１ターンに１度、エクストラデッキの融合モンスター１体を相手に見せ、そのモンスターにカード名が記されている融合素材モンスター１体をデッキから墓地へ送って発動できる。エンドフェイズまで、このカードはこの効果を発動するために墓地へ送ったモンスターと同名カードとして扱う。
   ko: |-
