--- a/data/cards/89907227.yaml
+++ b/data/cards/89907227.yaml
@@ -19,6 +19,7 @@ text:
     During your turn, when this card is Synchro Summoned: You can Special Summon 1 "Divine Dragon Token" (Fish/WATER/Level 10/ATK 3300/DEF 3000) in Defense Position. Once per opponent's turn, while you control no Tokens (Quick Effect): You can Special Summon 1 "Divine Dragon Token". If this card you control is destroyed by an opponent's card effect and sent to your GY, while you control a "Divine Dragon Token": You can Special Summon this card in Defense Position.
   de: |-
     1 Empfänger-Synchromonster + 1+ Nicht-Empfänger-Monster
+    (Diese Karte wird immer als „Weißaura“-Karte behandelt.)
     Während deines Spielzugs, wenn diese Karte als Synchrobeschwörung beschworen wird: Du kannst 1 „Himmlischer-Drache-Spielmarke“ (Fisch/WASSER/Stufe 10/ATK 3300/DEF 3000) als Spezialbeschwörung in die Verteidigungsposition beschwören. Einmal pro Spielzug deines Gegners, solange du keine Spielmarken kontrollierst (Schnelleffekt): Du kannst 1 „Himmlischer-Drache-Spielmarke“ als Spezialbeschwörung beschwören. Falls diese Karte, die du kontrollierst, durch einen Karteneffekt eines Gegners zerstört und auf deinen Friedhof gelegt wird, solange du eine „Himmlischer-Drache-Spielmarke“ kontrollierst: Du kannst diese Karte als Spezialbeschwörung in die Verteidigungsposition beschwören.
   es: |-
     1 Monstruo de Sincronía Cantante + 1+ monstruos que no sean Cantantes
