--- a/data/cards/91351370.yaml
+++ b/data/cards/91351370.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     When a "Blackwing" monster is Normal Summoned to your field: You can add 1 "Blackwing" monster from your Deck to your hand with less ATK than that monster.
   de: |-
-    Wenn ein „Schwarzflügel“-Monster als Normalbeschwörung auf deine Spielfeldseite beschworen wird: Du kannst deiner Hand 1 „Schwarzflügel“-Monster mit weniger ATK als das Monster von deinem Deck hinzufügen.
+    Wenn ein „Schwarzflügel“-Monster als Normalbeschwörung auf deine Spielfeldseite beschworen wird: Du kannst deiner Hand 1 „Schwarzflügel“-Monster mit weniger ATK als jenes Monster von deinem Deck hinzufügen.
   es: |-
     Cuando un monstruo "Alanegra" es Invocado de Modo Normal a tu Campo: puedes añadir a tu mano 1 monstruo "Alanegra" en tu Deck con un ATK menor al de ese monstruo.
   fr: |-
