--- a/data/cards/97317530.yaml
+++ b/data/cards/97317530.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If this card is Special Summoned by the effect of a Beast monster: You can target 1 card on the field; destroy that target.
   de: |-
-    Falls diese Karte durch den Effekt eines Ungeheuer-Monsters als Spezialbeschwörung beschworen wird: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre das gewählte Ziel.
+    Falls diese Karte durch den Effekt eines Ungeheuer-Monsters als Spezialbeschwörung beschworen wird: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre jenes gewählte Ziel.
   es: |-
     Si esta carta es Invocada de Modo Especial por el efecto de un monstruo Bestia: puedes seleccionar 1 carta en el Campo; destruye ese objetivo.
   fr: |-
