--- a/data/cards/47017574.yaml
+++ b/data/cards/47017574.yaml
@@ -20,23 +20,23 @@ text:
     ● Once per turn: You can detach 1 material from this card; negate the effects of all face-up cards your opponent currently controls, until the end of this turn. This activation and effect cannot be negated.
   de: |-
     4 Monster der Stufe 10
-    Kann nicht durch Kampf zerstört werden. Wenn ein Monster, das du kontrollierst, deinem Gegner Kampfschaden zufügt: Du erhältst LP in Höhe des Schadens, den er erhalten hat. Falls diese Karte „Nummer 92: Heart-eartH-Drache“ als Xyz-Material hat, erhält sie diesen Effekt.
+    Kann nicht durch Kampf zerstört werden. Falls ein Monster, das du kontrollierst, deinem Gegner Kampfschaden zufügt: Du erhältst LP in Höhe des Schadens, den er erhalten hat. Falls diese Karte „Nummer 92: Heart-eartH-Drache“ als Material hat, erhält sie diesen Effekt.
     ● Einmal pro Spielzug: Du kannst 1 Material von dieser Karte abhängen; annulliere bis zum Ende dieses Spielzugs die Effekte aller offenen Karten, die dein Gegner derzeit kontrolliert. Diese Aktivierung und dieser Effekt können nicht annulliert werden.
   es: |-
     4 monstruos de Nivel 10
-    No puede ser destruido en batalla. Cuando un monstruo que tú controlas inflige daño de batalla a tu adversario: ganas LP iguales al daño que él recibió. Si esta carta tiene a "Número 92: Dragón Heart-eartH" como Material Xyz, gana este efecto.
-    ● Una vez por turno: puedes desacoplar de esta carta 1 material; hasta el final de este turno, niega los efectos de todas las cartas boca arriba que controle tu adversario en este momento. Esta activación y efecto no pueden ser negados.
+    No puede ser destruido en batalla. Si un monstruo que controles inflige daño de batalla a tu adversario: ganas LP iguales al daño que él recibió. Si esta carta tiene "Número 92: Dragón Heart-eartH" como material, gana este efecto.
+    ● Una vez por turno: puedes desacoplar 1 material de esta carta; niega los efectos de todas las cartas boca arriba que controle tu adversario en este momento, hasta el final de este turno. Esta activación y efecto no pueden ser negados.
   fr: |-
     4 monstres de Niveau 10
-    Non destructible au combat. Lorsqu'un monstre que vous contrôlez inflige des dommages de combat à votre adversaire : vous gagnez des LP égaux aux dommages qu'il a reçus. Si cette carte a "Numéro 92 : Dragon Heart-eartH" comme Matériel Xyz, elle gagne cet effet.
-    ● Une fois par tour : vous pouvez détacher 1 Matériel de cette carte ; jusqu'à la fin de ce tour, annulez les effets de toutes les cartes face recto actuellement contrôlées par votre adversaire. Cette activation et effet ne peuvent être annulés.
+    Non destructible au combat. Si un monstre que vous contrôlez inflige des dommages de combat à votre adversaire : vous gagnez des LP égaux aux dommages qu'il a reçus. Si cette carte a "Numéro 92 : Dragon Heart-eartH" comme Matériel, elle gagne cet effet.
+    ● Une fois par tour : vous pouvez détacher 1 Matériel de cette carte ; jusqu'à la fin de ce tour, annulez les effets de toutes les cartes face recto actuellement contrôlées par votre adversaire. Cette activation et cet effet ne peuvent être annulés.
   it: |-
     4 mostri di Livello 10
-    Non può essere distrutto in battaglia. Quando un mostro che controlli infligge danno da combattimento al tuo avversario: guadagni LP pari al danno che ha subito. Se questa carta ha "Numero 92: Drago Heart-eartH" come Materiale Xyz, essa guadagna questo effetto.
+    Non può essere distrutto in battaglia. Se un mostro che controlli infligge danno da combattimento al tuo avversario: guadagni LP pari al danno che ha subito. Se questa carta ha "Numero 92: Drago Heart-eartH" come materiale, essa guadagna questo effetto.
     ● Una volta per turno: puoi staccare 1 materiale da questa carta; annulla gli effetti di tutte le carte scoperte attualmente controllate dal tuo avversario, fino alla fine di questo turno. Questa attivazione ed effetto non possono essere annullati.
   pt: |-
     4 monstros de Nível 10
-    Não pode ser destruído em batalha. Quando um monstro que você controla causar dano de batalha ao seu oponente: você ganha PV igual ao dano que o oponente sofreu. Se este card tiver "Número 92: Dragão Heart-eartH" como uma Matéria Xyz, ele ganha este efeito.
+    Não pode ser destruído em batalha. Se um monstro que você controla causar dano de batalha ao seu oponente: você ganha PV igual ao dano que ele sofreu. Se este card tiver "Número 92: Dragão Heart-eartH" como matéria, ele ganha este efeito.
     ● Uma vez por turno: você pode desassociar 1 matéria deste card; até o final deste turno, negue os efeitos de todos os cards com a face para cima que seu oponente controla atualmente. Esta ativação e efeito não podem ser negados.
   ja: |-
     レベル１０モンスター×４
