--- a/data/cards/69884162.yaml
+++ b/data/cards/69884162.yaml
@@ -24,13 +24,13 @@ text:
     Esta carta se trata como un Monstruo Normal mientras esté boca arriba en el Campo o en el Cementerio. Mientras esta carta sea un Monstruo Normal en el Campo, puedes Invocarla de Modo Normal para que se convierta en un Monstruo de Efecto con este efecto.
     ● El nombre de esta carta se convierte en "HÉROE Elemental Neos" mientras esté en el Campo.
   fr: |-
-    Cette carte est traitée comme un Monstre Normal tant qu'elle est face recto sur le Terrain ou dans le Cimetière. Tant que cette carte est un Monstre Normal sur le Terrain, vous pouvez l'Invoquer Normalement pour qu'elle devienne un Monstre à Effet avec cet effet.
+    Cette carte est traitée comme Monstre Normal tant qu'elle est face recto sur le Terrain ou dans le Cimetière. Tant que cette carte est un Monstre Normal sur le Terrain, vous pouvez l'Invoquer Normalement pour qu'elle devienne un Monstre à Effet avec cet effet.
     ● Le nom de cette carte devient "Néos, HÉROS Élémentaire" tant qu'elle est sur le Terrain.
   it: |-
     Questa carta viene considerata come un Mostro Normale mentre è scoperta sul Terreno o nel Cimitero. Mentre questa carta è un Mostro Normale sul Terreno, puoi Evocarla Normalmente per farla diventare un Mostro con Effetto con questo effetto.
     ● Il nome di questa carta diventa "Neos EROE Elementale" mentre è sul Terreno.
   pt: |-
-    Este card é considerado um Monstro Normal enquanto estiver com a face para cima no campo ou no Cemitério. Enquanto este card for um Monstro Normal no campo, você pode Invocá-lo por Invocação-Normal para fazer com que ele se torne um Monstro de Efeito com este efeito.
+    Este card é considerado como um Monstro Normal enquanto estiver com a face para cima no campo ou no Cemitério. Enquanto este card for um Monstro Normal no campo, você pode Invocá-lo por Invocação-Normal para fazer com que ele se torne um Monstro de Efeito com este efeito.
     ● O nome deste card se torna "Neos, o HERÓI do Elemento" enquanto estiver no campo.
   ja: |-
     ①：このカードはフィールド・墓地に存在する限り、通常モンスターとして扱う。②：フィールドの通常モンスター扱いのこのカードを通常召喚としてもう１度召喚できる。その場合このカードは効果モンスター扱いとなり以下の効果を得る。
