--- a/data/rush/15904.yaml
+++ b/data/rush/15904.yaml
@@ -70,6 +70,11 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
+  - set_number: RD/ORP2-JP004
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+    - Over Rush Rare
   ko:
   - set_number: RD/MAX1-KR010
     set_name: Maximum Ultra Enhancement Pack
