--- a/data/rush/15905.yaml
+++ b/data/rush/15905.yaml
@@ -95,6 +95,11 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Gold Rush Rare
+  - set_number: RD/ORP2-JP005
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+    - Over Rush Rare
   ko:
   - set_number: RD/MAX1-KR011
     set_name: Maximum Ultra Enhancement Pack
