--- a/data/rush/15907.yaml
+++ b/data/rush/15907.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
+  - set_number: RD/ORP2-JP011
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX1-KR013
     set_name: Maximum Ultra Enhancement Pack
