--- a/data/rush/yugipedia1042421.yaml
+++ b/data/rush/yugipedia1042421.yaml
@@ -66,6 +66,7 @@ sets:
   - set_number: RD/ORP2-JP039
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
