--- a/data/rush/yugipedia1044875.yaml
+++ b/data/rush/yugipedia1044875.yaml
@@ -64,6 +64,7 @@ sets:
   - set_number: RD/ORP2-JP024
     set_name: Over Rush Pack 2
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
