--- a/data/cards/56209279.yaml
+++ b/data/cards/56209279.yaml
@@ -28,7 +28,7 @@ text:
     Quando este card for Invocado por Invocação-Normal: coloque este card em Posição de Defesa. Enquanto você não tiver cards na sua mão, este card ganha o seguinte efeito.
     ● Uma vez por turno: você pode escolher 1 monstro "Inférnico(a)" no seu Cemitério, exceto "Necromante Inférnico"; Invoque-o por Invocação-Especial.
   ja: |-
-    このカードは召喚に成功した時、守備表示になる。自分の手札が０枚の場合、以下の効果を得る。１ターンに１度、自分の墓地に存在する「インフェルニティ・ネクロマンサー」以外の「インフェルニティ」と名のついたモンスター１体を特殊召喚する事ができる。
+    このカードは召喚に成功した時、守備表示になる。また、自分の手札が０枚の場合、このカードは以下の効果を得る。１ターンに１度、自分の墓地から「インフェルニティ・ネクロマンサー」以外の「インフェルニティ」と名のついたモンスター１体を選択して特殊召喚できる。
   ko: |-
     이 카드는 일반 소환에 성공했을 때, 수비 표시가 된다. 자신의 패가 0장일 경우, 이하의 효과를 얻는다. 1턴에 1번, 자신의 묘지에 존재하는 "인페르니티 네크로맨서" 이외의 "인페르니티"라는 이름이 붙은 몬스터 1장을 특수 소환할 수 있다.
   zh-TW: |-
