--- a/data/rush/15908.yaml
+++ b/data/rush/15908.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
+  - set_number: RD/ORP2-JP013
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX1-KR014
     set_name: Maximum Ultra Enhancement Pack
