--- a/data/rush/yugipedia1043809.yaml
+++ b/data/rush/yugipedia1043809.yaml
@@ -52,6 +52,7 @@ sets:
   - set_number: RD/ORP2-JP042
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
