--- a/data/rush/yugipedia1045074.yaml
+++ b/data/rush/yugipedia1045074.yaml
@@ -50,6 +50,7 @@ sets:
   - set_number: RD/ORP2-JP074
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
