--- a/rush.yaml
+++ b/rush.yaml
@@ -136623,7 +136623,7 @@ name:
   it:
   pt:
   ja: マルチスペース・ユグドラゴ
-  ja_romaji:
+  ja_romaji: Maruchisupēsu Yugudorago
   ko:
   ko_rr:
   zh-TW:
@@ -136685,7 +136685,7 @@ name:
   it:
   pt:
   ja: カオス・フェムトロン
-  ja_romaji:
+  ja_romaji: Kaosu Femutoron
   ko:
   ko_rr:
   zh-TW:
@@ -137045,7 +137045,7 @@ name:
   it:
   pt:
   ja: ドウェルチェア・コード
-  ja_romaji:
+  ja_romaji: Doweruchea Kōdo
   ko:
   ko_rr:
   zh-TW:
@@ -137081,7 +137081,7 @@ level: 1
 atk: 0
 def: 0
 series:
-- Scarechair
+- Chair
 images:
 - index: 1
   image: ScarechairCode-RDORP2-JP-OP.png
