--- a/data/rush/yugipedia1046004.yaml
+++ b/data/rush/yugipedia1046004.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 2 Cyberse Type Maximum Monsters, and/or DARK Attribute Fiend Type monsters with 0 ATK and 2400 or more DEF, from your Graveyard to your hand.
+    Add up to 2 Cyberse Type Maximum Monsters and/or DARK Attribute Fiend Type monsters with 0 ATK/2400 or more DEF from your Graveyard to your hand.
   de:
   es:
   fr:
