--- a/data/rush/yugipedia1046002.yaml
+++ b/data/rush/yugipedia1046002.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a LIGHT or DARK Attribute Cyberse Type monster by sending only monsters from your hand, or only face-up monsters from your field, to the Graveyard as material. Then, if you sent to the Graveyard a monster whose original name is "Space Yggdrago" by this effect, you can destroy 1 card on your opponent's field.
+    Fusion Summon a LIGHT Attribute or DARK Attribute Cyberse Type monster by sending only monsters from your hand, or only face-up monsters from your field, to the Graveyard as material. Then, if you sent to the Graveyard a monster whose original name is "Space Yggdrago" by this effect, you can destroy 1 card on your opponent's field.
   de:
   es:
   fr:
